--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="main.js"></script>
-  <title>Rock, Paper, Scissors</title>
-</head>
-<body>
-  
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="styles.css" />
+		<script src="main.js"></script>
+		<title>Rock, Paper, Scissors</title>
+	</head>
+	<body>
+		<h1 class="title">Rock, Paper & Scissors</h1>
+		<ul class="options">
+			<li><button>Rock</button></li>
+			<li><button>Paper</button></li>
+			<li><button>Scissors</button></li>
+		</ul>
+    <h2 class="result">Please pick Rock, Paper or Scissors</h2>
+		<h3 class="scores">
+			<span class="player-score">0</span>-<span class="computer-score">0</span>
+		</h3>
+	</body>
 </html>
