--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="styles.css" />
-		<script src="main.js"></script>
 		<title>Rock, Paper, Scissors</title>
 	</head>
 	<body>
 		<h1 class="title">Rock, Paper & Scissors</h1>
 		<ul class="options">
-			<li><button>Rock</button></li>
-			<li><button>Paper</button></li>
-			<li><button>Scissors</button></li>
+			<li><button class="option" value="rock">Rock</button></li>
+			<li><button class="option" value="paper">Paper</button></li>
+			<li><button class="option" value="scissors">Scissors</button></li>
 		</ul>
-    <h2 class="result">Please pick Rock, Paper or Scissors</h2>
+		<h2 class="result">Please pick Rock, Paper or Scissors</h2>
 		<h3 class="scores">
 			<span class="player-score">0</span>-<span class="computer-score">0</span>
 		</h3>
 	</body>
+	<script src="main.js"></script>
 </html>
